
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ stepcount; scalar_t__ result; int step; } ;
typedef TYPE_1__ base64_encodestate ;


 int step_A ;

void base64_init_encodestate(base64_encodestate* state_in)
{
 state_in->step = step_A;
 state_in->result = 0;
 state_in->stepcount = 0;
}
